# careportal-be

./: Dockerfile  README.md  alembic.ini  data_types.py  docker-compose.yml  main.py  pyproject.toml  routes.py  schemas.py
alembic/: env.py
alembic/versions/: 242022cdddd4_create_care_type_enum_and_facilities_.py  76c1d3c43815_update_care_type_enum_value.py  7d6d98988d94_popuate_data_into_columns.py  8ca47ab88193_create_care_types_table.py  c9e060965917_add_foreign_key_to_facilites_care_types.py  cfea392b6bf1_drop_type_of_care_column.py
db/: crud.py  database.py  models.py
service/: care_portal_service.py
