[tool.poetry]
name = "careportal-be"
version = "0.1.0"
description = ""
authors = ["Mohammed U"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.11"
sqlalchemy = "^2.0.38"
asyncpg = "^0.30.0"
alembic = "^1.14.1"
greenlet = "^3.1.1"
aiosqlite = "^0.21.0"
uvicorn = "^0.34.0"
pytest = "^8.3.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
